2003-10-06  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFileName.c:
	* generic/tclIOUtil.c: backport of volumerelative file normalization
	and 'file join' inconsistency fixes [Bug 767834, 813273].

2003-10-04  Chengye Mao <chengye.geo@yahoo.com>

	* win/tclWinPipe.c: fixed a bug in BuildCommandLine.
	This bug built a command line with a missing space between
	tclpipe.dll and the following arguments.  It caused error
	in Windows 98 when exec command.com (e.g. dir) [Bug 789040]

2003-10-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Fixed error in ref count management of command
	* generic/tclCmdMZ.c:	and execution traces that caused access to
	freed memory in trace-32.1.  [Bug 811483].

2003-10-03  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/fileName.test:
	* tests/winFCmd.test:
        * doc/FileSystem.3: backported various test and documentation
        changes from HEAD.  Backport of actual code fixes to follow.

2003-10-02  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bumped patch level to 8.4.5 to prepare
	* generic/tcl.h:	for next patch release.
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:	

	* library/http/http.tcl:	Bumped to http 2.4.5
	* library/http/pkgIndex.tcl:

2003-10-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
	* mac/tclMacResource.c: fixed possible NULL dereference (bdesgraupes).

2003-09-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (CallCommandTraces):	Added safety bit
	* tests/trace.test:	masking to prevent any of the bit values
	TCL_TRACE_*_EXEC from leaking into the flags field of any
	Command struct.  This does not fix [Bug 811483] but helps to
	contain some of its worst symptoms.  Also backported the corrections
	to test trace-28.4 from Vince Darley.
